# smc_ros_gazebo_plugins

./: .gitignore  Dockerfile  Manual-instructions.md  NOTICE  README.md  docker-compose.yaml  docker_compose.yaml
Docker/: Dockerfile  entrypoint.sh
gazebo_smc_plugins/: CMakeLists.txt  package.xml
gazebo_smc_plugins/src/: gazebo_drive_smc_plugin.cpp  gazebo_step_smc_plugin.cpp  vel_to_goal_smc_plugin.cpp
gz_sim_handler/: CMakeLists.txt  package.xml
gz_sim_handler/config/: gazebo_sim_basic_controller.json  gazebo_sim_basic_controller_short.json  gazebo_sim_refined_controller.json  gazebo_sim_roamer.json  ros_bridge.yaml
gz_sim_handler/jani/: basic_controller_model.jani  refined_controller_model.jani  roamer_model.jani
gz_sim_handler/launch/: start_gazebo_and_bridge_launch.py  start_ros_and_smc_storm_launch.py
gz_sim_handler/scripts/: spawn_simulation_ros.py
gz_sim_handler/src/: scan_processor_node.cpp
gz_sim_handler/worlds/: turtlebot3_world.sdf
roamer_pkg/: CMakeLists.txt  package.xml
roamer_pkg/action/: Roamer.action
roamer_pkg/include/: roamer_server.hpp
roamer_pkg/launch/: sim_launcher.launch.py
roamer_pkg/scripts/: pose_publisher.py
roamer_pkg/src/: roamer_server_main.cpp
ros_smc_plugins/: CMakeLists.txt  package.xml
ros_smc_plugins/src/: handle_simulation_smc_plugin.cpp  roamer_smc_plugin.cpp  ros_smc_plugin_template.cpp
sim_handling_interfaces/: CMakeLists.txt  package.xml
sim_handling_interfaces/include/sim_handling_interfaces/: gazebo_node_instances_holder.hpp
sim_handling_interfaces/srv/: StartGazebo.srv  StopGazebo.srv
