<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros_smc_plugins</name>
  <version>0.0.0</version>
  <description>Plugins connecting SMC to ROS Jazzy.</description>
  <maintainer email="matteo.palmas@de.bosch.com">user</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp_action</depend>
  <depend>sim_handling_interfaces</depend>
  <depend>roamer_pkg</depend>
  <depend>rosgraph_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
